--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.81",
-        "laravel/tinker": "^2.5"
+        "fruitcake/laravel-cors": "^2.0.5",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.0",
+        "laravel/tinker": "^2.7",
+        "laravel/sanctum": "^2.14"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.5.10",
-        "fakerphp/faker": "^1.9.1"
+        "fakerphp/faker": "^1.9.1",
+        "spatie/laravel-ignition": "^1.0",
+        "laravel/sail": "^1.13"
     },
     "config": {
         "optimize-autoloader": true,
