--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
+        "laravel/jetstream": "^2.6",
+        "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
-        "laravel/sanctum": "^2.14"
+        "livewire/livewire": "^2.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
