--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
         "laravel/sanctum": "^2.14"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.13",
+        "laravel/ui": "^3.4",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.5.10",
-        "fakerphp/faker": "^1.9.1",
-        "spatie/laravel-ignition": "^1.0",
-        "laravel/sail": "^1.13"
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
