--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "doctrine/dbal": "^3.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
-        "laravel/tinker": "^2.7",
-        "laravel/sanctum": "^2.14"
+        "laravel/sanctum": "^2.14",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^6.22",
         "laravel/sail": "^1.13",
         "laravel/ui": "^3.4",
         "mockery/mockery": "^1.4.4",
